[Update] Added item to professional timeline

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 </div>
                 <div class="icon-container">
                     <img src="./img/icons/dynamics-CRM-logo.png" style="width: 4.5em;" />
-                    <span>MS CRM D 365</span>
+                    <span>Dynamics 365</span>
                 </div>
                 <!-- <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" />
@@ -277,7 +277,7 @@
                 </div>
                 <div class="icon-container">
                     <img src="./img/icons/power-automate-logo.png" />
-                    <span>Power Automate</span>
+                    <span>P Automate</span>
                 </div>
                 <div class="icon-container">
                     <img src="./img/icons/postman-logo.svg" />
@@ -389,7 +389,7 @@
                         </span>
                         <span class="professional-timeline__org-item">
                             <span class="professional-timeline__technologies__subtitle">Technologies:</span>
-                             Microsoft CRM Dynamics 365, JavaScript, Power Automate, Logic Apps, Azure, Git, Git Kraken, DevOps.
+                             Microsoft CRM Dynamics 365, JavaScript, Power Automate, Azure (Logic Apps), Git, Git Kraken, DevOps.
                         </span>
                     </p>
                 </div>
