[Update] Added item to professional timeline

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                         </span>
                         <span class="professional-timeline__org-item">
                             <span class="professional-timeline__technologies__subtitle">Description:</span>
-                             AMS Service Now, Dynamics 365 Field Service
+                             AMS Service Now, Dynamics 365 Field Service.
                         </span>
                         <span class="professional-timeline__org-item">
                             <span class="professional-timeline__technologies__subtitle">Technologies:</span>
