[Update] Added item to professional timeline

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                         </span>
                         <span class="professional-timeline__org-item">
                             <span class="professional-timeline__technologies__subtitle">Description:</span>
-                             Backend endpoints mock
+                             Backend endpoints mock.
                         </span>
                         <span class="professional-timeline__org-item">
                             <span class="professional-timeline__technologies__subtitle">Technologies:</span>
