[Update] Added item to professional timeline

--- a/portfolio-sirun.html
+++ b/portfolio-sirun.html
@@ -133,6 +133,19 @@
             <!-- Carousel -->
             <div class="carousel">
                 <div class="carousel-item carousel-item-visible">
+                    <video id="sirunVideo">
+                        <source src="./img/SirunVideo.mp4" type="video/mp4">
+                    </video>
+                    <div class="video-btn__container">
+                        <button onclick="playVideo()" class="video-btn">
+                            <i class="fa-solid fa-play"></i>
+                        </button>
+                        <button onclick="pauseVideo()" class="video-btn">
+                            <i class="fa-solid fa-pause"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="carousel-item">
                     <img src="img/sirun-patisserie/sirun-home.png" alt="" />
                 </div>
                 <div class="carousel-item">
@@ -159,7 +172,7 @@
             </div>
 
             <br/>
-
+            <a href=""></a>
             <p>With this app you are able to see all the products Sirun Pâtisserie is offering at the moment and make a purchase. Also you can check out the full information or detail about every product.</p>
             <p>As a <strong>registered user</strong> you can have an account, change your profile picture or your name, delete existing addresses associated with your account, request to change/reset your password, have your own wishlist, check your orders history and of course your own shopping cart. Also you can leave comments or reviews on every product and rate them! All your reviews will appear on your account.</p>
             <p>As an <strong>administrator</strong> you will also have access to the administration section of the app. Here you'll be able to manage the existing products, the existing users, manage orders and change their status and control the reviews every user has added. You will also be able to check out the sales metrics and upload new products to the e-commerce.</p>
