[Update] Added item to professional timeline

--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-                    <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
+                    <li class="nav__item"><a href="#services" class="nav__link">My services</a></li>
                     <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
-                    <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
-                    <li class="nav__item"><a href="#skills" class="nav__link">Skills & Tools</a></li>
-                    <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                    <li class="nav__item"><a href="#timeline" class="nav__link">My professional timeline</a></li>
+                    <li class="nav__item"><a href="#skills" class="nav__link">Skills & tools</a></li>
+                    <li class="nav__item"><a href="#work" class="nav__link">My work</a></li>
+                    <!-- <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li> -->
                 </ul>
             </nav>
         </header>
@@ -164,8 +165,8 @@
                 </a>
             </div>
         </section>
-
        
+
         <div class="angle angle4"></div>
 
 
@@ -335,7 +336,7 @@
         
 
         <!-- Professional timeline -->
-        <section class="professional-timeline" id="work">
+        <section class="professional-timeline" id="timeline">
             <h2 class="section__title section__title--professional-timeline">My professional timeline</h2>
             <p class="section__subtitle section__subtitle--professional-timeline">
                 <!-- Technologies learned over the years -->
@@ -360,7 +361,7 @@
                              C#, .NET Framework (4.6.2 - 4.8), Microsoft CRM Dynamics 365, JavaScript, Git, DevOps.
                         </span>
 
-                        <br/>
+                        <span style="padding: 0.5em;"></span>
 
                         <span class="professional-timeline__org">BLAZAR GROUP [Oct 2023]</span>
                         <span class="professional-timeline__org-item">
@@ -373,10 +374,10 @@
                         </span>
                         <span class="professional-timeline__org-item">
                             <span class="professional-timeline__technologies__subtitle">Technologies:</span>
-                             React, Mock Sevice Worker, TypeScript,Git, GitHub.
+                             React, Mock Service Worker, TypeScript, Git, GitHub.
                         </span>
 
-                        <br/>
+                        <span style="padding: 0.5em;"></span>
 
                         <span class="professional-timeline__org">REPLY CLUSTER [Nov 2023 - Present]</span>
                         <span class="professional-timeline__org-item">
