--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                         <a href="https://github.com/AlexiaMilanesio/blazar-academy-backend" target="_blank" class="repo-link">Backend exercises repository</a>
                         <span>
                             <span class="professional-timeline__technologies__subtitle">Projects:</span>
-                             Battleship.
+                             <a href="portfolio-battleship.html" class="professional-timeline__project-link">Battleship</a>.
                         </span>
                     </p>
                 </div>
@@ -428,7 +428,8 @@
                         </span>
                         <span>
                             <span class="professional-timeline__technologies__subtitle">Projects:</span> 
-                             Pokemon, Sirun Pätisserie.
+                            <a href="portfolio-pokemon.html" class="professional-timeline__project-link">Pokemon</a>, 
+                            <a href="portfolio-sirun.html" class="professional-timeline__project-link">Sirun Pätisserie</a>.
                         </span>
                     </p>
                 </div>
@@ -446,7 +447,11 @@
                         </span>
                         <span>
                             <span class="professional-timeline__technologies__subtitle">Projects:</span>
-                             Tindog, Tenzies, Quizzical, Movies Watchlist, Space Travel.
+                            <a href="portfolio-tindog.html" class="professional-timeline__project-link">Tindog</a>, 
+                            <a href="portfolio-tenzies.html" class="professional-timeline__project-link">Tenzies</a>, 
+                            <a href="portfolio-quizzical.html" class="professional-timeline__project-link">Quizzical</a>, 
+                            <a href="portfolio-movies.html" class="professional-timeline__project-link">Movies Watchlist</a>,
+                            <a href="portfolio-space-travel.html" class="professional-timeline__project-link">Space Travel</a>.
                         </span>
                     </p>
                 </div>
