Added info to timeline

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                         </span>
                         <span class="professional-timeline__org-item">
                             <span class="professional-timeline__technologies__subtitle">Technologies:</span>
-                             Microsoft CRM Dynamics 365, JavaScript, Power Automate, Azure (Logic Apps), Git, Git Kraken, DevOps.
+                             Dynamics 365, JavaScript, Power Automate, Azure (Logic Apps), .NET Framework (v 4.6.1), C#, Git, Git Kraken, DevOps.
                         </span>
 
                         <span style="padding: 0.5em;"></span>
@@ -387,11 +387,11 @@
                         </span>
                         <span class="professional-timeline__org-item">
                             <span class="professional-timeline__technologies__subtitle">Description:</span>
-                             Microsoft CRM Dynamics 365 system migration and update.
+                             Dynamics 365 system migration and update.
                         </span>
                         <span class="professional-timeline__org-item">
                             <span class="professional-timeline__technologies__subtitle">Technologies:</span>
-                             C#, .NET Framework (4.6.2 - 4.8), Microsoft CRM Dynamics 365, JavaScript, Git, DevOps.
+                             C#, .NET Framework (v4.6.2 - v4.8), Dynamics 365, JavaScript, Git, DevOps.
                         </span>
                     </p>
                 </div>
